--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,15 +2,15 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <h2 class="footer-heading">Say hello!</h2>
 
     <div class="footer-col-wrapper">
-      <div class="footer-col  footer-col-1">
+      <!--<div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
         </ul>
-      </div>
+      </div>-->
 
       <div class="footer-col  footer-col-2">
         <ul class="social-media-list">
@@ -46,7 +46,7 @@
       </div>
 
       <div class="footer-col  footer-col-3">
-        <p class="text">{{ site.description }}</p>
+        <!--<p class="text">Say hello!</p>-->
       </div>
     </div>
 
